# ai-act-risk-assessor

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  streamlit_app.py
schemas/: audit_record.schema.json
src/assessor/: __init__.py  ai_act.py  audit.py  audit_schema.py  cli.py  drafter.py  extractor.py  iso_42001.py  normalizer.py  replay.py  schema.py  verifier.py
src/assessor/prompts/: drafter.jinja2  extractor.jinja2
tests/: conftest.py  test_audit.py  test_replay.py  test_rule_engine.py  test_verifier.py
tests/fixtures/: expected_classifications.yaml  feature_credit_scoring.txt  feature_employee_evaluation.txt  feature_genai_email_draft.txt  feature_internal_tool.txt  feature_social_scoring.txt
