[project]
name = "ai-act-assessor"
version = "0.1.0"
description = "AI Act risk assessor — neuro-symbolic classification with deterministic audit trail"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<3",
    "instructor>=1.5,<2",
    "openai>=1.40,<2",
    "jinja2>=3.1,<4",
    "jsonschema>=4.21,<5",
    "click>=8.1,<9",
    "rich>=13.7,<14",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-timeout>=2.2,<3",
    "mypy>=1.9,<2",
    "ruff>=0.4,<1",
]

[project.scripts]
assessor = "assessor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/assessor"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "ollama: tests requiring a running Ollama instance",
]

[tool.ruff]
line-length = 100
target-version = "py311"
